# cuke4data

./: .gitignore  LICENSE.md  Readme.md  pyproject.toml  setup.py
.github/workflows/: pythonapp.yml
cuke4data/: gherkin.py
environments/: postgres_docker.sh
examples/: user.gherkin
src/lib/gk4data/: __init__.py  gherkin.py
test/: gherkin_tests.py  test.sh
tests/: cuke4data_tests.py  dataquality.gherkin  simple.gherkin  test.sh  test_cuke4data.py
