[tool.poetry]
name = "cuke4data"
version = "0.1.0"
description = "Cucumber language for Data Quality and Integration"
authors = ["Inigo <igponce@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy="1.3.12"

[tool.poetry.dev-dependencies]
pytest = ""
sqlalchemy="1.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
